--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,10 @@
   <packaging>maven-plugin</packaging>
 
   <properties>
+    <dep.commons-lang3.version>3.5</dep.commons-lang3.version>
+
     <dep.guava.version>23.5-jre</dep.guava.version>
+    <dep.plugin.plugin.version>3.4</dep.plugin.plugin.version>
   </properties>
 
   <dependencyManagement>
@@ -20,12 +23,12 @@
       <dependency>
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-plugin-api</artifactId>
-        <version>3.3.3</version>
+        <version>3.5.2</version>
       </dependency>
       <dependency>
         <groupId>org.apache.maven.plugin-tools</groupId>
         <artifactId>maven-plugin-annotations</artifactId>
-        <version>3.4</version>
+        <version>3.5</version>
       </dependency>
       <dependency>
         <groupId>com.google.guava</groupId>
@@ -56,7 +59,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-plugin-plugin</artifactId>
-          <version>3.4</version>
+          <version>${dep.plugin.plugin.version}</version>
         </plugin>
       </plugins>
     </pluginManagement>
